--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@ input ,button {
 
 .container {
     margin: 20px;
-    width: 100px;
-    height: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
 }
 
 .inner-div {
