--- a/style.css
+++ b/style.css
@@ -16,11 +16,14 @@ input ,button {
     margin: 20px;
     display: flex;
     flex-wrap: wrap;
-    gap: 8px;
+    border: 1px solid black;
 }
 
 .inner-div {
-    border: 1px solid black;
-    width: 100px;
-    height: 100px;
+    width: 20px;
+    height: 20px;
+}
+
+.entered {
+    background-color: black;
 }
