--- a/style.css
+++ b/style.css
@@ -4,27 +4,31 @@
     padding: 0px;
 }
 
-input ,button {
-    margin: 20px;
-    margin-right: 0px;
-    padding: 8px;
-    font-size: 18px;
+.wrapper {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+button {
+    padding: 16px;
+    font-size: 16px;
     border-radius: 8px;
+    margin-bottom: 20px;
 }
 
 .container {
-    margin: 20px;
-    width: 960px;
-    display: flex;
-    flex-wrap: wrap;
+    margin: auto;
+    width: 700px;
+    height: 700px;
     border: 1px solid black;
+
+    display: flex;
 }
 
 .inner-div {
-    width: 100px;
-    height: 100px;
-}
-
-.entered {
-    background-color: black;
+    flex: 1;
+    background-color: red;
 }
