--- a/style.css
+++ b/style.css
@@ -30,11 +30,21 @@ input {
     justify-content: center;
     align-items: center;
     background-color: whitesmoke;
+    padding-bottom: 20px;
 }
 
 .container {
-    width: 500px;
-    height: 500px;
+    width: 600px;
+    height: 600px;
+    border: 1px solid black;
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.inner-div {
+    flex: 1;
+
     border: 1px solid black;
 }
 
