Add hovering effect in inner-divs

--- a/style.css
+++ b/style.css
@@ -44,8 +44,10 @@ input {
 
 .inner-div {
     flex: 1;
+}
 
-    border: 1px solid black;
+.entered {
+    background-color: black;
 }
 
 .footer {
