--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     box-shadow: 1px 1px 2px rgba(0,0,0,0.8);
 }
 
-input {
+input, button {
     padding: 16px;
     width: 80px;
     border-radius: 8px;
@@ -44,10 +44,6 @@ input {
 
 .inner-div {
     flex: 1;
-}
-
-.entered {
-    background-color: black;
 }
 
 .footer {
